fixing css for navbar, got dark mode localstoraged for page reloads fixed

--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -207,6 +207,8 @@ body::after{
 }
 .remember-box {
     cursor: pointer;
+    display: inline-block;
+    width:40px;
 }
 .remember-me{  
     font-size:16px;
