--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -5,7 +5,33 @@
          url('../fonts/flowers.woff') format('woff');
       
   }
+@font-face {
+    font-family: 'prettyhandwriting';
+    src: url('../fonts/prettyhandwriting.ttf') format('truetype'),
+        
+      
+  }
+@font-face {
+    font-family: 'prettyhandwriting2';
+    src: url('../fonts/prettyhandwriting2.ttf') format('truetype'),
   
+        
+      
+  }
+  @font-face {
+    font-family: 'prettyhandwriting3';
+    src: url('../fonts/prettyhandwriting3.ttf') format('truetype'),
+  
+        
+      
+  } 
+  @font-face {
+    font-family: 'prettyhandwriting4';
+    src: url('../fonts/prettyhandwriting4.ttf') format('truetype'),
+  
+        
+      
+  }
   /*Keyframe animations*/
   @keyframes background-gradient {
     0% {
@@ -38,10 +64,23 @@
     background-image: var(--background-gradient-light);
     background-size:400%;
     background-position: left;
-    overflow-y:scroll;
+    overflow-y: scroll;
     overflow-x: hidden;
     animation: background-gradient 20s ease infinite alternate;
   }
+  body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #efdaf7;
+  }
+  body::-webkit-scrollbar {
+    width: 9px;
+    background-color: #F5F5F5;
+  }
+  body::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #777373;
+  }
+  
   .body-dark-mode {
     background-image: var(--background-gradient-dark);
   }
@@ -49,77 +88,60 @@
   /*!==========CODE FOR NAVBAR STARTS HERE===========*/
   /*=================================================*/
   .navbar {
-    position: sticky;
+    position: relative;
+    top:0;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     z-index: 2;
+
   }
   /*code for the fist nav container starts here*/
-  .first-nav-container {
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
-  .logo {
-    height:3vh;
-    width:5vw;
-    margin-right: 2em;
-    margin-top: 0.5rem;
-    transition: 250ms;
-    fill: rgb(63, 63, 66);
-  }
-  .logo:hover {
-    fill: var(--dark-lilac-color);
-  }
   .darkmode-checkbox {
     display: none;
   }
   .dark-mode {
-    height: 48%;
-    width:62px;
+    height: 25px;
+    width:60px;
     border: 1px solid black;
     border-radius: 30px;
     background-color: var(--white-color);
     position: relative;
     cursor: pointer;
-    margin-right: 2em;
-    margin-top: 0.5rem;
-    transition: 250ms;
+    transition: 200ms;
     box-shadow: inset 0 5px 15px 0 rgba(0, 0, 0, 0.4),
       inset 0px -5px 15px rgba(255, 255, 255, 0.4);
     display: block;
+    margin-left: 10px;
   }
   .dark-mode::after {
     content: "";
     position: absolute;
-    width: 1.4rem;
-    height: 1.4rem;
+    width: 1.3rem;
+    height: 1.3rem;
     border-radius: 50%;
     background: linear-gradient(180deg, #ffcc89 0%, #d8860b 100%);
     top: 1px;
     left: 1px;
-    transition: 250ms;
+    transition: 200ms;
   }
   .dark-mode:active::after {
-    width: 1.7rem;
+    width: 1.45rem;
   }
   
   .darkmode-checkbox:checked + .dark-mode::after {
-    left: 3.8rem;
+    left: 3.6rem;
     background: linear-gradient(180deg, #777, #3a3a3a);
     transform: translateX(-100%);
   }
   
   .darkmode-checkbox:checked + .dark-mode {
     background-color: black;
-  }
-  .darkmode-checkbox:checked + body {
-    background-color: #3a3a3a;
+    border: 1px solid rgb(139, 137, 137) ;
   }
   
   .dark-mode svg {
@@ -146,7 +168,7 @@
   .menu-icon {
     width:2rem;
     height:2rem;
-    transition: 250ms;
+    transition: 200ms;
   
   }
   .menu-icon path {
@@ -159,42 +181,39 @@
   .menu-icon:hover {
     cursor: pointer;
   }
-  .menu-icon.active {
-    fill: var(--dark-lilac-color);
-  }
   .menu-container {
     position: absolute;
     display:flex;
     flex-direction:column;
-    top: 50px; 
+    top: 40px; 
     width:100%;
     overflow: hidden;
     max-height: 0; /* Set the initial height to 0 */
-    transition: max-height 800ms ease-in-out;
-    background-color: rgb(139, 72, 149);
+    transition:300ms ease-in-out;
+    background: linear-gradient(90deg, rgba(169, 164, 164, 0.8) 0%, rgb(137, 82, 170) 15%, rgb(145, 85, 179) 85%, rgba(169, 164, 164, 0.8) 100%);
     box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.5);
     color: var(--dark-brown-color);
     font-weight: 700;
-    z-index: 1000;
+    z-index: 3;
   }
   
   .menu-links {
     text-align: center;
-    transition: 250ms;
+    font-size: 1rem;
+    font-weight: 200;
+    color: var(--lilac-color);
     cursor: pointer;
     width:100%;
     margin: 1rem;
     text-decoration: none;
+    font-family: 'prettyhandwriting';
   }
   .menu-links:hover,
   .menu-links.active {
-    color: var(--lilac-color);
+    color: white;
   }
   .menu-container.opened {
     max-height: 300px;
-  }
-  .menu-container:not(.opened) {
-    transition: max-height 800ms ease-in-out;
   }
   .greeting {
     display:none;
@@ -205,7 +224,7 @@
   }
   .menu-container-dark{
     color: #7e7e7e;
-    background-color: #000000;
+    background-color: rgb(31, 31, 31);
     box-shadow: 0 3px 10px rgba(250, 250, 250,0.2);  
   }
   /*media querei to change the menu-container and menu-icon display when at least Xpx is reached*/
@@ -253,31 +272,31 @@
   
   /*code for the third nav container/dropdown menu*/
   .profile-icon {
-    margin-right: .5em;
+    margin-right: 1em;
     margin-top: .5rem;
-    transition: 250ms;
+    transition: 200ms;
     fill: var(--dark-brown-color);
-    width:2rem;
-    height:2rem;
+    width:1.7rem;
+    height:1.7rem;
   }
   .profile-dropdown {
     background: linear-gradient(
       90deg,
       var(--dark-lilac-color) 0%,
-      var(--black-color)
+      rgb(31, 31, 31)
     )
     100%;
     display: flex;
     flex-direction: column;
     position: absolute;
     max-width: 0;
-    top: 5.5vh;
+    top: 40px;
     right: 0; /* Align to the right */
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    transition: max-width 600ms ease-in-out;
-    z-index: 1001;
+    transition: 300ms ease-in-out;
+    z-index: 3;
   }
   .profile-dropdown-dark{
     box-shadow: -4px 3px 10px 0 rgba(246, 246, 246, 0.5);
@@ -291,11 +310,9 @@
   .profile-dropdown.opened {
     max-width: 200px;
   }
-  .profile-icon.active {
-    fill: var(--dark-lilac-color);
-  }
+
   .profile-dropdown:not(.opened) {
-    transition: max-width 600ms ease-in-out;
+    transition: 300ms ease-in-out;
   }
   .profile-icon:hover {
     cursor: pointer;
